--- a/app/Resources/TwigBundle/views/Exception/error404.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error404.html.twig
@@ -1,9 +1,14 @@
-{% extends '::base.html.twig' %}
-
-{% block error %}
-    <h1>Nothing's here!</h1>
-    <p>
-        You seem to have encountered a 404 error. That is to say, you are looking for something that is not here.
-        Perhaps you are looking for something else, or something that does not exist at all?
-    </p>
-{% endblock %}
+<!DOCTYPE html>
+<html>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>Error | HvZ @ RIT</title>
+</head>
+<body>
+<h1>Nothing's here!</h1>
+<p>
+    You seem to have encountered a <strong>404 error</strong>. That is to say, you are looking for something that is not here.
+    Perhaps you are looking for something else, or something that does not exist at all?
+</p>
+</body>
+</html>
