--- a/app/Resources/TwigBundle/views/Exception/error.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error.html.twig
@@ -14,7 +14,7 @@
     <p>{{ status_text }}</p>
 </blockquote>
 <p>
-    Rest assured, we will dispatch our team of trained <s>zombies</s> humans to <s>eat brans</s>
+    Rest assured, we will dispatch our team of trained <s>zombies</s> humans to <s>eat brains</s>
     fix the issue.
 </p>
 </body>
