remove unused option

--- a/app/Resources/views/Game/status.html.twig
+++ b/app/Resources/views/Game/status.html.twig
@@ -101,8 +101,7 @@
 
                 var options = google.charts.Bar.convertOptions({
                     title: 'Infection Timeline',
-                    colors: ['black'],
-                    legend: 'none'
+                    colors: ['black']
                 });
 
                 var chart = new google.charts.Bar(document.getElementById('infection-chart'));
