--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -60,7 +60,9 @@
                     </a>
                 </div>
                 <div class="col-sm-6">
-                    <p class="text-muted pull-right">Copyright &copy; 2015</p>
+                    <p class="text-muted pull-right">
+                        Copyright &copy; 2015 | <a href="https://github.com/redxdev/hvzapi-docs">API</a>
+                    </p>
                 </div>
             </div>
         </div>
