--- a/app/Resources/views/Game/status.html.twig
+++ b/app/Resources/views/Game/status.html.twig
@@ -46,14 +46,14 @@
                 {% endif %}
             </div>
         </div>
-        {% if timeline is defined and timeline|length > 0 %}
+        {% if timeline is not null and timeline|length > 0 %}
             <div class="row">
                 <div id="infection-chart" class="col-md-12" style="height: 250px;">
                 </div>
             </div>
         {% endif %}
         <div class="row">
-            {% if infections is defined and infections|length > 0 %}
+            {% if infections is not null and infections|length > 0 %}
                 <div class="col-sm-6 text-center">
                     <h1>Recent Infections</h1>
                     {% for infection in infections %}
@@ -61,13 +61,11 @@
                     {% endfor %}
                 </div>
             {% endif %}
-            {% if top_players is defined and top_players|length > 0 %}
+            {% if top_players is not null and top_players|length > 0 %}
                 <div class="col-sm-6 text-center">
                     <h1>Top Players</h1>
                     {% for player in top_players %}
-                        {% if player.humansTagged > 0 %}
-                            <p><strong>{{ player.fullname }}</strong> with <strong>{{ player.humansTagged }}</strong> tags</p>
-                        {% endif %}
+                        <p><strong>{{ player.fullname }}</strong> with <strong>{{ player.humansTagged }}</strong> tags</p>
                     {% endfor %}
                 </div>
             {% endif %}
@@ -82,7 +80,7 @@
         <script type="text/javascript" src="{{ asset_url }}"></script>
     {% endjavascripts %}
 
-    {% if timeline is defined and timeline|length > 0 %}
+    {% if timeline is not null and timeline|length > 0 %}
         <script type="text/javascript" src="https://www.google.com/jsapi"></script>
 
         <script type="text/javascript">
