adjusted logo on non-status pages

--- a/app/Resources/views/components.html.twig
+++ b/app/Resources/views/components.html.twig
@@ -17,7 +17,7 @@
                         {% if type == "lower" %}
                             <img class="logo" src="{{ asset('assets/images/hvzlogo.png') }}" alt="HvZ @ RIT">
                         {% else %}
-                            <img class="logo" src="{{ asset('assets/images/hvzlogo.png') }}" alt="HvZ @ RIT">
+                            <img class="logo" src="{{ asset('assets/images/hvzlogo_small.png') }}" alt="HvZ @ RIT">
                         {% endif %}
                     </a>
                 </div>
