--- a/app/Resources/views/Admin/print.html.twig
+++ b/app/Resources/views/Admin/print.html.twig
@@ -3,7 +3,7 @@
 <head>
     <title>HvZ Player Id Cards</title>
 
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Ubuntu+Mono' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="{{ asset('assets/css/print.css') }}">
 </head>
 <body>
