--- a/app/Resources/views/components.html.twig
+++ b/app/Resources/views/components.html.twig
@@ -89,20 +89,20 @@
     </div>
 {% endmacro %}
 
-{% macro delete_dialog(text) %}
+{% macro delete_dialog(text, title, button) %}
     <div class="modal fade" id="delete-dialog" tabindex="-1" role="dialog" aria-hidden="true" aria-labelledby="delete-dialog-label">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                    <h4 class="modal-title" id="delete-dialog-label">Delete</h4>
+                    <h4 class="modal-title" id="delete-dialog-label">{{ title|default('Delete') }}</h4>
                 </div>
                 <div class="modal-body">
                     <p>{{ text }} <span id="delete-id">ERROR</span>?</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                    <button id="delete-button" type="button" class="btn btn-danger">Delete</button>
+                    <button id="delete-button" type="button" class="btn btn-danger">{{ button|default('Delete') }}</button>
                 </div>
             </div>
         </div>
