--- a/app/Resources/views/Game/map.html.twig
+++ b/app/Resources/views/Game/map.html.twig
@@ -26,7 +26,7 @@
 {% endblock %}
 
 {% block body_def %}
-    {# class="navbar-offset" #}
+    class="navbar-offset"
 {% endblock %}
 
 {% block body %}
