remove footer on map page

--- a/app/Resources/views/Game/map.html.twig
+++ b/app/Resources/views/Game/map.html.twig
@@ -38,6 +38,10 @@
     </div>
 {% endblock %}
 
+{% block footer %}
+    <!-- No footer here! -->
+{% endblock %}
+
 {% block body_javascripts %}
     {{ parent() }}
 
