--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -61,7 +61,9 @@
                 </div>
                 <div class="col-sm-6">
                     <p class="text-muted pull-right">
-                        Copyright &copy; 2015 | <a href="https://github.com/redxdev/hvzapi-docs">API</a>
+                        Copyright &copy; 2015 |
+                        <a href="{{ path('web_content') }}">Contact</a> |
+                        <a href="https://github.com/redxdev/hvzapi-docs">API</a>
                     </p>
                 </div>
             </div>
