web_content -> web_contact

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -62,7 +62,7 @@
                 <div class="col-sm-6">
                     <p class="text-muted pull-right">
                         Copyright &copy; 2015 |
-                        <a href="{{ path('web_content') }}">Contact</a> |
+                        <a href="{{ path('web_contact') }}">Contact</a> |
                         <a href="https://github.com/redxdev/hvzapi-docs">API</a>
                     </p>
                 </div>
