--- a/app/Resources/views/Game/contact.html.twig
+++ b/app/Resources/views/Game/contact.html.twig
@@ -16,9 +16,9 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-sm-4 col-sm-offset-4">
-                <h2 class="text-center">Contact</h2>
-                For inquiries, disputes, or anything else, please email <a href="mailto:hvz@rit.edu">hvz@rit.edu</a>.
+            <div class="col-sm-12 text-center">
+                <h2>Contact</h2>
+                <p>For inquiries, disputes, or anything else, please email <a href="mailto:hvz@rit.edu">hvz@rit.edu</a>.</p>
             </div>
         </div>
     </div>
