add app store link

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -54,7 +54,7 @@
                         <img alt="Android app on Google Play"
                              src="{{ asset('assets/images/google_play.png') }}" />
                     </a>
-                    <a href="#">
+                    <a href="https://itunes.apple.com/us/app/humans-vs-zombies-rit/id980740241">
                         <img alt="iOS app on the App Store"
                              src="{{ asset('assets/images/app_store.png') }}" />
                     </a>
