don't show stuff mods can't use anyway

--- a/app/Resources/views/Admin/players.html.twig
+++ b/app/Resources/views/Admin/players.html.twig
@@ -30,11 +30,13 @@
                 </form>
             </div>
 
-            <div class="col-md-5 col-md-offset-2 col-sm-4">
-                <a href="{{ path('web_admin_player_create') }}" class="btn btn-primary">
-                    <span class="glyphicon glyphicon-plus"></span>
-                </a>
-            </div>
+            {% if is_granted('ROLE_ADMIN') %}
+                <div class="col-md-5 col-md-offset-2 col-sm-4">
+                    <a href="{{ path('web_admin_player_create') }}" class="btn btn-primary">
+                        <span class="glyphicon glyphicon-plus"></span>
+                    </a>
+                </div>
+            {% endif %}
         </div>
 
         <div class="vertical-space"></div>
