don't allow the use of antiviruses multiple times

--- a/app/Resources/views/Game/antivirus.html.twig
+++ b/app/Resources/views/Game/antivirus.html.twig
@@ -18,7 +18,8 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <h2>Antivirus Code</h2>
-                Antivirus codes may not be used between 5PM and 11PM, and must be used before 2AM on Friday.
+                <p>Antivirus codes may not be used between 5PM and 11PM, and must be used before 2AM on Friday.</p>
+                <p>You may only use one antivirus.</p>
             </div>
         </div>
         <div class="row">
