bit more warning text

--- a/app/Resources/views/Admin/notify.html.twig
+++ b/app/Resources/views/Admin/notify.html.twig
@@ -23,6 +23,10 @@
                     notification to all players that have the app. Do not play with this page, do not spam
                     notifications, and be VERY careful with how you use this!
                 </p>
+                <p>
+                    Note that the messages should be fairly short (a short sentence is ideal). Remember, this has to fit
+                    inside an Android/iOS notification.
+                </p>
             </div>
         </div>
         <div class="row">
