--- a/app/Resources/views/components.html.twig
+++ b/app/Resources/views/components.html.twig
@@ -78,7 +78,7 @@
                                 {% if is_granted('ROLE_ADMIN') %}
                                     {{ components.nav_internal_link('antiviruses', path('web_admin_antiviruses'), 'Antiviruses', selected2) }}
                                     {{ components.nav_internal_link('rulesets', path('web_admin_rulesets'), 'Rulesets', selected2) }}
-                                    {% if notification_hub_enabled %}
+                                    {% if notification_hub_enabled and is_granted('ROLE_SUPERADMIN') %}
                                         {{ components.nav_internal_link('notify', path('web_admin_notify'), 'Notify', selected2) }}
                                     {% endif %}
                                     {{ components.nav_internal_link('print', path('web_admin_print'), 'Print', selected2) }}
