change av message

--- a/app/Resources/views/Game/antivirus.html.twig
+++ b/app/Resources/views/Game/antivirus.html.twig
@@ -75,7 +75,7 @@
     {% if av_clan matches '/[oO][zZ][mM][aA]/' %}
         <script type="text/javascript">
             // Check your console
-            eval(function(p,a,c,k,e,d){e=function(c){return c};if(!''.replace(/^/,String)){while(c--){d[c]=k[c]||c}k=[function(e){return d[e]}];e=function(){return'\\w+'};c=1};while(c--){if(k[c]){p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c])}}return p}('$(0(){1.2(3("4="))});',5,5,'function|console|log|atob|V2VsY29tZSB0byB0aGUgY2xhbiBvZiBhbnRpdmlydXNlcyEgODluZnFrZmM'.split('|'),0,{}));
+            eval(function(p,a,c,k,e,d){e=function(c){return c};if(!''.replace(/^/,String)){while(c--){d[c]=k[c]||c}k=[function(e){return d[e]}];e=function(){return'\\w+'};c=1};while(c--){if(k[c]){p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c])}}return p}('$(0(){1.2(3("4=="))});',5,5,'function|console|log|atob|V2VsY29tZSB0byBPWk1BISA4OW5mcWtmYw'.split('|'),0,{}));
         </script>
     {% else %}
         <!--
