--- a/app/Resources/views/Game/status.html.twig
+++ b/app/Resources/views/Game/status.html.twig
@@ -16,7 +16,7 @@
                 </h1>
             {% else %}
                 <h1>
-                    <strong>There is no game currently scheduled</strong>
+                    <strong>Game Over</strong>
                 </h1>
             {% endif %}
         </div>
@@ -27,23 +27,15 @@
     <div class="container">
         <div class="row">
             <div class="well col-sm-5 text-center bg-human large-text">
-                {% if game %}
-                    <h1><strong>{{ team.humans }}</strong></h1>
-                    Human{% if team.humans != 1 %}s{% endif %}
-                {% else %}
-                    There is no game scheduled
-                {% endif %}
+                <h1><strong>{{ team.humans }}</strong></h1>
+                Human{% if team.humans != 1 %}s{% endif %}
             </div>
             <div class="col-sm-2 text-center large-text">
                 <h1>VS</h1>
             </div>
             <div class="well col-sm-5 text-center bg-zombie large-text">
-                {% if game %}
-                    <h1><strong>{{ team.zombies }}</strong></h1>
-                    Zombie{% if team.zombies != 1 %}s{% endif %}
-                {% else %}
-                    There is no game scheduled
-                {% endif %}
+                <h1><strong>{{ team.zombies }}</strong></h1>
+                Zombie{% if team.zombies != 1 %}s{% endif %}
             </div>
         </div>
         {% if timeline is not null and timeline|length > 0 %}
