--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -63,7 +63,8 @@
                     <p class="text-muted pull-right">
                         Copyright &copy; 2015 |
                         <a href="{{ path('web_contact') }}">Contact</a> |
-                        <a href="https://github.com/redxdev/hvzapi-docs">API</a>
+                        <a href="https://github.com/redxdev/hvzapi-docs">API</a> |
+                        <a href="https://github.com/redxdev/hvzsite">Fork me on GitHub</a>
                     </p>
                 </div>
             </div>
