--- a/app/Resources/views/Game/rules.html.twig
+++ b/app/Resources/views/Game/rules.html.twig
@@ -25,7 +25,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="hidden-xs col-sm-3">
+            <div class="hidden-xs col-sm-3" style="overflow: auto; height: 100%;">
                 <ul class="nav nav-pills nav-stacked side-nav" data-spy="affix">
                     {% for ruleset in rulesets %}
                         <li><a href="#rule-{{ loop.index }}">{{ ruleset.title }}</a></li>
